# digdoc

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  coap_helper.c  coap_helper.h  main.c  main.h  mdns.h  test.py  test.sh
.github/workflows/: test.yml
source/: conf.py  index.rst
sphinx/: Doxyfile
sphinx/source/: conf.py  index.rst
sphinx/xml/: Doxyfile.xml  README_8md.xml  index.xml  main_8c.xml  md__2home_2leonie_2Git_2coap_2digdoc_2README.xml  structarguments.xml
testing/: test.py  test.sh  test_sample.py
xml/: Doxyfile.xml  index.xml  main_8c.xml  structarguments.xml
